--- a/themes/compact/variables.scss
+++ b/themes/compact/variables.scss
@@ -1,22 +1,19 @@
-$brand-primary: #D78F46;
-$brand-highlight: #00C1FF;
-$brand-success: #86B951;
-$brand-info: #00C1FF;
-$brand-warning: #FF7300;
-$brand-danger: #FF1C38;
-$brand-bg: #2A2C2B;
+/*
+$brand-primary: #C87B28;
+$brand-highlight: #1D4ED8;
+$brand-success: #166534;
+$brand-info: #1D4ED8;
+$brand-warning: #FACC15;
+$brand-danger: #991B1B;
+$brand-bg: $gray-lighter;
 $brand-menu: #4C4C4C;
 $brand-secondary: #D78F46;
 $brand-clickable: #D78F46;
 $text-color: #eeeeee;
 $text-color-disabled: #808080;
 $link-color: #D78F46;
-$font-size-base: 12px;
-$hidpi-scale-factor: 100%;
-$font-family-base: "Roboto";
-$font-family-headings: "Montserrat";
-$gutter-width: 16px;
-$dark-theme: true;
+*/
 
+$gutter-width: 16px;
 $titlebar-height: 52px !default;
 $titlebar-rows: 1 !default;
